@@ -1,5 +1,13 @@
 2005-05-18  Sam Steingold  <sds@gnu.org>
 
+	* utils/modprep.lisp (split-option): removed an absurd check
+	(split-command): do not call SPLIT-OPTION on all ARGS
+	(def-something-p): call SPLIT-OPTION just on the options
+	(split-command, extract-argument-string, check-signature, new-checker):
+	standardized error message
+
+2005-05-18  Sam Steingold  <sds@gnu.org>
+
 	* genclisph.d (sec_usec): export
 
 2005-05-18  Sam Steingold  <sds@gnu.org>
